--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://beelabb.cxxachbyxxhk.ap-southeast-2.rds.amazonaws.com:3306/db-beeladb
+spring.datasource.url=jdbc:mysql://localhost:3306/beelab1
 spring.datasource.username=sa
-spring.datasource.password=12345678
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
