--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db-beeladb
-spring.datasource.username=root
-spring.datasource.password=phanlucgiahuy
+spring.datasource.url=jdbc:mysql://localhost:3306/beelab1
+spring.datasource.username=sa
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 pring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
