--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db-beeladb
+spring.datasource.url=jdbc:mysql://localhost:3306/beeladb
 spring.datasource.username=root
 spring.datasource.password=phanlucgiahuy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -6,3 +6,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 pring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+server.port=8081
