--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
 			<version>0.12.3</version>
 			<scope>runtime</scope>
 		</dependency>
-	
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
