--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto = update
 pring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
+server.port=8081
+
