--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.jpa.hibernate.ddl-auto = update
 pring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
+email.username=trungnlmps23303@fpt.edu.vn
+email.password=uwag iwrf qoay zpxj
+
 server.port=8080
 
