--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.5</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath/>
+		<!--  lookup parent from repository  -->
 	</parent>
 	<groupId>com.Beelab</groupId>
 	<artifactId>Backend-Beelab</artifactId>
@@ -24,7 +25,9 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<version>
+				8.0.33
+			</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -42,7 +45,7 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
-			<version>1.4.2.Final</version> <!-- Thay version bằng phiên bản mới nhất -->
+			<version>1.5.3.Final</version> <!-- Thay version bằng phiên bản mới nhất -->
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
@@ -56,7 +59,7 @@
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
-			<version>2.4.4</version> <!-- Kiểm tra phiên bản mới nhất -->
+			<version>3.1.1</version> <!-- Kiểm tra phiên bản mới nhất -->
 		</dependency>
 
 		<dependency>
@@ -78,7 +81,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>24.0.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -94,6 +97,7 @@
         <dependency>
             <groupId>org.eclipse.angus</groupId>
             <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -117,13 +121,16 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.12.2</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
+
+
+				<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
+
 
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
